--- a/My.html
+++ b/My.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="theme-color" content="black">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LꫝUCIEFER ゞ俟</title>
+  <title>Cystro</title>
   <link rel="icon" href="https://graph.facebook.com/100004179274058/picture?height=720&width=720&access_token=6628568379%7Cc1e620fa708a1d5696fb991c1bde5662" type="image/x-icon" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.0/css/all.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
