--- a/My.html
+++ b/My.html
@@ -897,8 +897,8 @@
   <div class="overlay" id="popup">
     <div class="popup">
       <div class="popup-photo">
-        <a href="https://graph.facebook.com/100004179274058/picture?height=720&width=720&access_token=6628568379%7Cc1e620fa708a1d5696fb991c1bde5662" target="_blank">
-          <img src="https://graph.facebook.com/100004179274058/picture?height=720&width=720&access_token=6628568379%7Cc1e620fa708a1d5696fb991c1bde5662" alt="Profile Picture">
+        <a href="https://graph.facebook.com/100085065303625/picture?height=720&width=720&access_token=6628568379%7Cc1e620fa708a1d5696fb991c1bde5662" target="_blank">
+          <img src="https://graph.facebook.com/100085065303625/picture?height=720&width=720&access_token=6628568379%7Cc1e620fa708a1d5696fb991c1bde5662" alt="Profile Picture">
         </a>
       </div>
         <div class="popup-quote">
@@ -909,12 +909,12 @@
   </div>
 
   <div id="userName">
-    @LꫝUCIEFER ゞ俟
+    @CYSTRO
   </div>
 
 
   <div id="links">
-      <a class="link" href="https://www.facebook.com/ce.uppx" target="_blank">
+      <a class="link" href="https://www.facebook.com/profile.php?id=100085065303625" target="_blank">
       <i class="fab fa-facebook">
       </i> Facebook
       </i>
