--- a/My.html
+++ b/My.html
@@ -927,6 +927,9 @@
     </a>
     <a class="link" href="https://wa.me/+2490960830601" target="_blank">
            <i class="fab fa-optin-monster">&nbsp;</i> my account What'sApp
+         </a>
+    <a class="link" href="https://replit.com/@luciefer249#README.md" target="_blank">
+           <i class="fab fa-optin-monster">&nbsp;</i> my accoun Replit 
     </a>
   </div>
 
