--- a/My.html
+++ b/My.html
@@ -920,16 +920,16 @@
       </i>
       </a>
     <a class="link" href="https://t.me/UC_IPPP" target="_blank">
-      <i class="fab fa-telegram">&nbsp;</i> my account Telegram 
+      <i class="fab fa-telegram">&nbsp;</i>  Telegram 
     </a>
     <a class="link" href="https://github.com/LUCIEFER2864/" target="_blank">
-      <i class="fab fa-github">&nbsp;</i> my account GitHub
+      <i class="fab fa-github">&nbsp;</i> GitHub
     </a>
     <a class="link" href="https://wa.me/+2490960830601" target="_blank">
-           <i class="fab fa-optin-monster">&nbsp;</i> my account What'sApp
+           <i class="fab fa-optin-monster">&nbsp;</i>  What'sApp
          </a>
     <a class="link" href="https://replit.com/@luciefer249#README.md" target="_blank">
-           <i class="fab fa-optin-monster">&nbsp;</i> my accoun Replit 
+           <i class="fab fa-optin-monster">&nbsp;</i>  Replit 
     </a>
   </div>
 
