--- a/My.html
+++ b/My.html
@@ -916,7 +916,7 @@
   <div id="links">
       <a class="link" href="https://www.facebook.com/profile.php?id=100085065303625" target="_blank">
       <i class="fab fa-facebook">
-      </i> my account facbook 
+      </i> facbook 
       </i>
       </a>
     <a class="link" href="https://t.me/UC_IPPP" target="_blank">
