--- a/My.html
+++ b/My.html
@@ -922,15 +922,18 @@
     <a class="link" href="https://t.me/UC_IPPP" target="_blank">
       <i class="fab fa-telegram">&nbsp;</i>  Telegram 
     </a>
-    <a class="link" href="https://github.com/LUCIEFER2864/" target="_blank">
+    <a class="link" href="https://github.com/CYSTRO4044" target="_blank">
       <i class="fab fa-github">&nbsp;</i> GitHub
     </a>
     <a class="link" href="https://wa.me/+2490960830601" target="_blank">
            <i class="fab fa-optin-monster">&nbsp;</i>  What'sApp
          </a>
-    <a class="link" href="https://replit.com/@luciefer249#README.md" target="_blank">
+    <a class="link" href="https://replit.com/@Cystro4044" target="_blank">
            <i class="fab fa-optin-monster">&nbsp;</i>  Replit 
     </a>
+        <a class="link" href="Cystro4044@outlook.com" target="_blank">
+           <i class="fab fa-optin-monster">&nbsp;</i>  Goggle 
+        </a>
   </div>
 
   <div id="hashtag">
