--- a/My.html
+++ b/My.html
@@ -932,7 +932,7 @@
            <i class="fab fa-optin-monster">&nbsp;</i>  Replit 
     </a>
         <a class="link" href="Cystro4044@outlook.com" target="_blank">
-           <i class="fab fa-optin-monster">&nbsp;</i>  Goggle 
+           <i class="fab fa-optin-monster">&nbsp;</i>  Google
         </a>
   </div>
 
